<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.hairless</groupId>
    <artifactId>plink</artifactId>
    <packaging>pom</packaging>
    <version>0.2.0-SNAPSHOT</version>

    <name>Plink</name>
    <url>https://github.com/hairless/plink</url>
    <description>Platform for Flink</description>

    <modules>
        <module>plink-common</module>
        <module>plink-model</module>
        <module>plink-dao</module>
        <module>plink-service</module>
        <module>plink-web</module>
        <module>plink-rpc</module>
        <module>plink-schedule</module>
        <module>plink-dist</module>
        <module>plink-sql</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>1.8</java.version>
        <spring.boot.version>2.2.2.RELEASE</spring.boot.version>

        <scala.binary.version>2.11</scala.binary.version>
        <flink.version>1.11.0</flink.version>

        <junit.version>4.13</junit.version>
        <slf4j.version>1.7.29</slf4j.version>
        <logback.version>1.2.3</logback.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--project modules-->
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-rpc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-schedule</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.hairless</groupId>
                <artifactId>plink-sql</artifactId>
                <type>pom</type>
                <version>${project.version}</version>
            </dependency>

            <!--spring boots modules-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- mybatis/database -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.18</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid</artifactId>
                <version>1.1.20</version>
            </dependency>
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper-spring-boot-starter</artifactId>
                <version>2.1.5</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper</artifactId>
                <version>5.1.11</version>
            </dependency>

            <!-- flink -->
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-core</artifactId>
                <version>${flink.version}</version>
            </dependency>

            <!-- utils -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.8</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.62</version>
            </dependency>
            <dependency>
                <groupId>com.arronlong</groupId>
                <artifactId>httpclientutil</artifactId>
                <version>1.0.4</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.9</version>
            </dependency>

            <!-- log -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <!-- Junit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>